@@ -16,6 +16,9 @@
 
 package com.google.appengine.api.taskqueue;
 
+import static com.google.common.base.Strings.isNullOrEmpty;
+import static java.nio.charset.StandardCharsets.UTF_8;
+
 import java.io.IOException;
 import java.io.ObjectInputStream;
 import java.io.Serializable;
@@ -30,12 +33,11 @@ import org.jspecify.annotations.Nullable;
  * Created from {@link Queue#add(TaskOptions)}. Contains the task name (generated if otherwise
  * unspecified), task ETA (computed if not specified) and queue name. The queue name and task name
  * uniquely identify the task for an application.
- *
  */
 public final class TaskHandle implements Serializable {
   private static final long serialVersionUID = -2578988193753847512L;
   private String taskName;
-  private String queueName;
+  private final String queueName;
   // etaUsec is used to track the eta to the same precision that is associated
   // with the task in bigtable. Currently this is required when modifying the
   // task lease as there is a current owner check  that compares the
@@ -45,7 +47,7 @@ public final class TaskHandle implements Serializable {
   // retrieved from the queue - and these tasks are represented by TaskHandles.
   private long etaUsec;
   private long etaMillis;
-  private Integer retryCount;
+  private final Integer retryCount;
   private @Nullable TaskOptions options;
 
   TaskHandle(TaskOptions options, String queueName, @Nullable Integer retryCount) {
@@ -63,7 +65,9 @@ public final class TaskHandle implements Serializable {
     this(options, queueName, 0);
   }
 
-  /** @deprecated Use {@link TaskHandle#TaskHandle(TaskOptions, String)} */
+  /**
+   * @deprecated Use {@link TaskHandle#TaskHandle(TaskOptions, String)}
+   */
   @Deprecated
   public TaskHandle(String name, String queueName, long etaMillis) {
     this(TaskOptions.Builder.withTaskName(name).etaMillis(etaMillis), queueName, null);
@@ -136,9 +140,7 @@ public final class TaskHandle implements Serializable {
    */
   static void validateTaskName(String taskName) {
     // Verify task name matches RE specification.
-    if (taskName == null
-        || taskName.length() == 0
-        || !QueueConstants.TASK_NAME_PATTERN.matcher(taskName).matches()) {
+    if (isNullOrEmpty(taskName) || !QueueConstants.TASK_NAME_PATTERN.matcher(taskName).matches()) {
       throw new IllegalArgumentException(
           "Task name does not match expression "
               + QueueConstants.TASK_NAME_REGEX
@@ -205,6 +207,11 @@ public final class TaskHandle implements Serializable {
   /** Returns binary payload data of this task. Can return {@code null}. */
   public byte[] getPayload() {
     return options.getPayload();
+  }
+
+  /** Returns the HTTP/Queue method of this task options. Can return {@code null}. */
+  public TaskOptions.@Nullable Method getMethod() {
+    return options != null ? options.getMethod() : null;
   }
 
   /**
@@ -286,12 +293,13 @@ public final class TaskHandle implements Serializable {
    * @throws UnsupportedOperationException if the {@code options} has no payload or the payload
    *     bytes could not be interpreted as application/x-www-form-urlencoded key-value pairs.
    */
+  @SuppressWarnings("CheckedExceptionNotThrown")
   public List<Map.Entry<String, String>> extractParams()
       throws UnsupportedEncodingException, UnsupportedOperationException {
-    String payload = new String(getPayload());
+    String payload = new String(getPayload(), UTF_8);
     String[] paramStrings = payload.split("&");
 
-    List<Map.Entry<String, String>> result = new ArrayList<Map.Entry<String, String>>();
+    List<Map.Entry<String, String>> result = new ArrayList<>();
     for (String param : paramStrings) {
       String[] kv = param.split("=", 2);
       if (kv.length != 2) {
@@ -304,7 +312,7 @@ public final class TaskHandle implements Serializable {
                 + kv.length);
       }
       result.add(
-          new KeyValuePair(URLDecoder.decode(kv[0], "UTF-8"), URLDecoder.decode(kv[1], "UTF-8")));
+          new KeyValuePair(URLDecoder.decode(kv[0], UTF_8), URLDecoder.decode(kv[1], UTF_8)));
     }
     return result;
   }
